# tracking-bfm

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
docs/: migration.md
docs/adr/: 0001-standalone-mjlab-dependency.md
docs/architecture/: motion-source.md  tracking-cleanup.md
docs/superpowers/plans/: 2026-06-23-tracking-bfm-standalone-migration.md  2026-06-25-commands-refactor-implementation.md
docs/superpowers/specs/: 2026-06-25-commands-refactor-design.md
scripts/: README.md  _common.sh  data-process.sh  data_process.sh  diagnostics.sh  evaluate.sh  export.sh  play.sh  train.sh
src/tracking_bfm/: __init__.py  motion_source.py
src/tracking_bfm/data_process/: __init__.py  failed_motion_cleanup.py  motion_dataset_generation.py  motion_filtering.py
src/tracking_bfm/export/: __init__.py  checkpoint.py  metadata.py  onnx_latent_policy.py  onnx_policy.py
src/tracking_bfm/scripts/: cli_helpers.py  evaluate.py  export.py  export_latent_onnx.py  export_onnx.py  play.py  train.py
src/tracking_bfm/scripts/data_process/: __init__.py  delete_failed_motions.py  filter_motions.py  generate_motion_dataset.py
src/tracking_bfm/scripts/diagnostics/: __init__.py  analyze_latent_space.py  inspect_checkpoint.py
src/tracking_bfm/tasks/: __init__.py  registry.py
src/tracking_bfm/tasks/distillation/: __init__.py  distillation_env_cfg.py
src/tracking_bfm/tasks/distillation/config/: __init__.py
src/tracking_bfm/tasks/distillation/mdp/: __init__.py  commands.py  observations.py  terminations.py
src/tracking_bfm/tasks/distillation/rl/: __init__.py  algorithm.py  models.py  runner.py  schedules.py  teacher.py
src/tracking_bfm/tasks/latent_tracking/: __init__.py
src/tracking_bfm/tasks/latent_tracking/config/: __init__.py
src/tracking_bfm/tasks/latent_tracking/rl/: __init__.py  runner.py
src/tracking_bfm/tasks/latent_velocity/: __init__.py
src/tracking_bfm/tasks/latent_velocity/config/: __init__.py
src/tracking_bfm/tasks/latent_velocity/mdp/: __init__.py  rewards.py
src/tracking_bfm/tasks/tracking/: __init__.py  env_cfgs.py  rl_cfg.py  tracking_env_cfg.py
tests/: test_entry_points.py  test_motion_source.py  test_project_structure.py
tests/data_process/: test_data_process.py
tests/export/: test_export.py
tests/scripts/: test_scripts.py
tests/tasks/distillation/: test_distillation_tasks.py
tests/tasks/latent/: test_latent_tasks.py
tests/tasks/tracking/: test_adaptive_sampling.py  test_command_runtime_smoke.py  test_motion_dataset.py  test_policy_artifact.py  test_tracking_tasks.py  test_wbteleop_runner_cleanup.py
(+35 files in other folders)
