[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "tracking-bfm"
version = "0.1.0"
description = "Standalone BFM tracking tasks built on mjlab."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "matplotlib>=3.8",
  "mjlab[cu128]==1.4.0",
  "scikit-learn>=1.5",
  "torch==2.10.0+cu128; sys_platform != 'darwin'",
  "torch>=2.7.0; sys_platform == 'darwin'",
  "torchrunx>=0.3.4",
  "wandb>=0.22.3",
]

[project.entry-points."mjlab.tasks"]
tracking_bfm = "tracking_bfm"

[project.scripts]
tracking-bfm-train = "tracking_bfm.scripts.train:main"
tracking-bfm-play = "tracking_bfm.scripts.play:main"
tracking-bfm-evaluate = "tracking_bfm.scripts.evaluate:main"
tracking-bfm-export-onnx = "tracking_bfm.scripts.export_onnx:main"
tracking-bfm-export-latent-onnx = "tracking_bfm.scripts.export_latent_onnx:main"
tracking-bfm-filter-motions = "tracking_bfm.scripts.data_process.filter_motions:main"
tracking-bfm-generate-motion-dataset = "tracking_bfm.scripts.data_process.generate_motion_dataset:main"
tracking-bfm-delete-failed-motions = "tracking_bfm.scripts.data_process.delete_failed_motions:main"
tracking-bfm-analyze-latent-space = "tracking_bfm.scripts.diagnostics.analyze_latent_space:main"
tracking-bfm-inspect-checkpoint = "tracking_bfm.scripts.diagnostics.inspect_checkpoint:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.14.14",
  "pyright>=1.1.408",
  "tomli>=2.0; python_version < '3.11'",
]

[tool.uv.sources]
warp-lang = { index = "nvidia", marker = "sys_platform != 'darwin'" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
mujoco = { index = "mujoco" }
mujoco-warp = { git = "https://github.com/google-deepmind/mujoco_warp", rev = "88b55fc2696960b927bc12584994bb8412b36558" }

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "mujoco"
url = "https://py.mujoco.org"
explicit = true

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff]
src = ["src"]
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]
ignore = ["B011"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
